    * Source/PKToolbarPresentation.m:
      Fix drifting of toolbar presentation.
    * Source/PKTableViewPresentation.m:
      Initialize table view in -init and reuse it.
    * Headers/UKPluginsRegistry.h:
    * Headers/PKPaneRegistry.h:
    * Source/UKPluginsRegistry.h:
    * Source/PKPaneRegistry.h:
      Rename UKPluginsRegistry to PKPaneRegistry.

2006-11-07  Yen-Ju Chen <yjchex gmail>

    * Source/UKPluginsRegistry.m:
    * Source/PKPrefPanesRegistry.m:
    Unified the singleton handling to allow multiple registries
    in an application.
    * Rename as PaneKit.
    * Remove Backbone compability.

    * Source/PKToolbarPresentation.m:
    * Source/PKPlainPresentation.m:
    * Source/PKMatrixPresentation.m:
    * Source/PKTableViewPresentation.m:
    Decrease minimal window size for smaller pane.

    * Info.plist:
    * version.plist:
    remove unnecessary files.

2006-11-06  Quentin Mathe <qmathe@club-internet.fr>

    * Fix compilation on GNUstep.

2006-11-05  Quentin Mathe <qmathe@club-internet.fr>

    * Fix flick of matrix view.
    * Work on GNUstep.
    * New PKPlainPresentation for single preference pane.
    * Support adding preference pane programmingly.

2006-11-04  Quentin Mathe <qmathe@club-internet.fr>

    * Write table view in code.
    * Remove all compilation warnings (GNUstep and Cocoa with GNUstep-make).
    * Fix memory leak on matrix presentation.
    * Cache preferences controller and loaded plugins in presentation.
    * Remove unused -presentationView (it is problematic).
    * Fix flick of table view and shift of toolbar view.

2006-09-26  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile: Modified to include 'etoile.make'.

2006-02-14  Quentin Mathe <qmathe@club-internet.fr>

    * Headers/PKPreferencesController.h: Made class summary in notice more 
    accurate.
    * Source/PKPreferencesController.m: Fixed documentation markup and removed 
    some constants not needed (enclosed in a conditional directive).