@@ -26,8 +26,7 @@
 
 #import <AppKit/AppKit.h>
 #import <PaneKit/CocoaCompatibility.h>
-#import <PaneKit/PKPreferencesController.h>
-#import <PaneKit/PKPrefPanesRegistry.h>
+#import <PaneKit/PKPanesController.h>
 #import <PaneKit/PKMatrixViewPresentation.h>
 #import "PKMatrixView.h"
 #import "GNUstep.h"
